...
    const val DESTINATION_SERVER_MENU = "Destination Server Dropdown %s"
    const val QUALITY_PROFILE_MENU = "Quality Profile Dropdown %s"
    const val ROOT_FOLDER_MENU = "Root Folder Dropdown %s"
  }

  object Settings {
    const val SCREEN_CONTENT = "Settings Screen Content"

    const val TOP_APP_BAR = "Settings Top App Bar"
    const val NAVIGATION_ICON = "Settings Navigation Icon"

    const val RADIO_BUTTON_SELECT_OPTION = "Settings Radio Button Select Option %s"

    object Account {
      const val LOGIN_BUTTON = "Account Login Button"
      const val LOGOUT_BUTTON = "Account Logout Button"
...
